--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Pure browser based functions for ecdsa functions(generate key pair, sign)",
   "main": "main.js",
   "dependencies": {
+    "canonical-json": "0.0.4",
     "elliptic": "^6.4.1",
     "js-sha3": "^0.8.0",
     "secp256k1": "^3.6.2"
